--- a/manifests/back.yaml
+++ b/manifests/back.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: backend
-          image: gassouma530975/testdeploy:back2
+          image: gassouma530975/testdeploy:backend-0d2246f683627302faa884d656e69966ba8d02eb
           ports:
             - containerPort: 80
           volumeMounts:
