--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -56,7 +56,7 @@ FROM nginx:alpine
 ENV NODE_ENV=production
 
 # Run the application as a non-root user.
-USER node
+# USER node
 
 # Copy package.json so that package manager commands can be used.
 #COPY package.json .
