--- a/manifests/back.yaml
+++ b/manifests/back.yaml
@@ -22,6 +22,14 @@ spec:
             - name: secret-volume
               mountPath: "/etc/secrets"
               readOnly: true
+          resources:
+            limits:
+              memory: "256Mi" # Maximum memory allowed
+              cpu: "100m" # Maximum CPU allowed (200 milliCPU)
+            requests:
+              memory: "128Mi" # Initial memory request
+              cpu: "100m" # Initial CPU request
+
       volumes:
         - name: secret-volume
           secret:
