--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -45,7 +45,7 @@ http {
     }
 
     location /api {
-         proxy_pass http://backend-service.backend.svc.cluster.local:3000;
+         proxy_pass http://backend-service.development.svc.cluster.local:3000;
             # proxy_http_version 1.1;
             # proxy_set_header Host $host;
             # proxy_set_header X-Real-IP $remote_addr;
