--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,16 +13,16 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
-      # - name: analyse with sonarqube
-      #   uses: SonarSource/sonarqube-scan-action@v6.0.0
-      #   with:
-      #     args: >
-      #       -Dsonar.projectKey=testProject
-      #   env:
-      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      #     SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-      # If you wish to fail your job when the Quality Gate is red, uncomment the
-      # following lines. This would typically be used to fail a deployment.
+      - name: analyse with sonarqube
+        uses: SonarSource/sonarqube-scan-action@v6.0.0
+        with:
+          args: >
+            -Dsonar.projectKey=testProject
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+      #If you wish to fail your job when the Quality Gate is red, uncomment the
+      #following lines. This would typically be used to fail a deployment.
       # - uses: sonarsource/sonarqube-quality-gate-action@master
       #   timeout-minutes: 5
       #   env:
@@ -88,6 +88,6 @@ jobs:
             -H "Authorization: Bearer $TOKEN" \
             -H "Content-Type: application/json"
         env:
-          ARGOCD_SERVER: https://192.168.1.27:32315
+          ARGOCD_SERVER: http://20.83.160.209
           ARGOCD_USER: ${{ secrets.ARGOCD_USER }}
           ARGOCD_PASSWORD: ${{ secrets.ARGOCD_PASSWORD }}
