--- a/manifests/ingress.yaml
+++ b/manifests/ingress.yaml
@@ -12,7 +12,7 @@ metadata:
     # nginx.ingress.kubernetes.io/hsts-include-subdomains: "true"
     # nginx.ingress.kubernetes.io/hsts-preload: "true"
 spec:
-  ingressClassName: webapprouting.kubernetes.azure.com
+  ingressClassName: webapprouting.kubernetes.azure.com #nginx
   tls:
     - hosts:
         - shopstore.freeddns.org
