--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,19 +8,19 @@ permissions:
 jobs:
   build:
     name: Build
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
-      - name: analyse with sonarqube
-        uses: SonarSource/sonarqube-scan-action@v6.0.0
-        with:
-          args: >
-            -Dsonar.projectKey=testProject
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+      # - name: analyse with sonarqube
+      #   uses: SonarSource/sonarqube-scan-action@v6.0.0
+      #   with:
+      #     args: >
+      #       -Dsonar.projectKey=testProject
+      #   env:
+      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      #     SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
       #If you wish to fail your job when the Quality Gate is red, uncomment the
       #following lines. This would typically be used to fail a deployment.
       # - uses: sonarsource/sonarqube-quality-gate-action@master
@@ -28,47 +28,47 @@ jobs:
       #   env:
       #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      # - name: Log in to Docker Hub
+      #   uses: docker/login-action@v3
+      #   with:
+      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
+      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v3
 
-      # Build and push FRONTEND image
-      - name: Build and Push Frontend Docker image
-        uses: docker/build-push-action@v6
-        with:
-          context: ./frontend
-          push: true
-          platforms: linux/amd64,linux/arm64
-          tags:
-            docker.io/gassouma530975/testdeploy:frontend-${{ github.sha }}
-            # Build and push FRONTEND image
-      - name: Build and Push Backend Docker image
-        uses: docker/build-push-action@v6
-        with:
-          context: ./backend
-          push: true
-          platforms: linux/amd64,linux/arm64
-          tags: docker.io/gassouma530975/testdeploy:backend-${{ github.sha }}
+      # # Build and push FRONTEND image
+      # - name: Build and Push Frontend Docker image
+      #   uses: docker/build-push-action@v6
+      #   with:
+      #     context: ./frontend
+      #     push: true
+      #     platforms: linux/amd64,linux/arm64
+      #     tags:
+      #       docker.io/gassouma530975/testdeploy:frontend-${{ github.sha }}
+      #       # Build and push FRONTEND image
+      # - name: Build and Push Backend Docker image
+      #   uses: docker/build-push-action@v6
+      #   with:
+      #     context: ./backend
+      #     push: true
+      #     platforms: linux/amd64,linux/arm64
+      #     tags: docker.io/gassouma530975/testdeploy:backend-${{ github.sha }}
 
-      - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@0.28.0
-        with:
-          image-ref: "docker.io/gassouma530975/testdeploy:frontend-${{ github.sha }}"
-          format: "table"
-          #exit-code: '1'
-          ignore-unfixed: true
-          vuln-type: "os,library"
-          severity: "CRITICAL,HIGH"
+      # - name: Run Trivy vulnerability scanner
+      #   uses: aquasecurity/trivy-action@0.28.0
+      #   with:
+      #     image-ref: "docker.io/gassouma530975/testdeploy:frontend-${{ github.sha }}"
+      #     format: "table"
+      #     #exit-code: '1'
+      #     ignore-unfixed: true
+      #     vuln-type: "os,library"
+      #     severity: "CRITICAL,HIGH"
 
       - name: Commit and Push Changes
         run: |
-          sed -i "s|gassouma530975/testdeploy:.*|gassouma530975/testdeploy:frontend-${{github.sha}}|" manifests/front.yaml
-          sed -i "s|gassouma530975/testdeploy:.*|gassouma530975/testdeploy:backend-${{github.sha}}|" manifests/back.yaml
+          sed -i "s|gassouma530975/testdeploy:.*|gassouma530975/testdeploy:frontend-918ef8031642125a2f6325a050d30e6252cdd23f|" manifests/front.yaml
+          sed -i "s|gassouma530975/testdeploy:.*|gassouma530975/testdeploy:backend-918ef8031642125a2f6325a050d30e6252cdd23f|" manifests/back.yaml
           # configure user
           git config --global user.name "${{ github.actor }}"
           git config --global user.email "${{ github.actor }}@users.noreply.github.com"
@@ -76,7 +76,7 @@ jobs:
           git add manifests/front.yaml
           git add manifests/back.yaml
           # make commit with staged changes
-          git commit -m 'files changed ${{github.sha}}'
+          git commit -m 'files changed 918ef8031642125a2f6325a050d30e6252cdd23f'
           # push the commit back up to source GitHub repository
           git push
       - name: Trigger ArgoCD sync
@@ -88,6 +88,6 @@ jobs:
             -H "Authorization: Bearer $TOKEN" \
             -H "Content-Type: application/json"
         env:
-          ARGOCD_SERVER: https://20.83.160.209
+          ARGOCD_SERVER: ${{ secrets.ARGOCD_SERVER }} #https://20.83.160.209
           ARGOCD_USER: ${{ secrets.ARGOCD_USER }}
           ARGOCD_PASSWORD: ${{ secrets.ARGOCD_PASSWORD }}
