--- a/manifests/cluster-issuer.yaml
+++ b/manifests/cluster-issuer.yaml
@@ -1,14 +1,14 @@
-apiVersion: cert-manager.io/v1
-kind: ClusterIssuer
-metadata:
-  name: letsencrypt-production
-spec:
-  acme:
-    server: https://acme-v02.api.letsencrypt.org/directory
-    email: gassouma530@gmail.com
-    privateKeySecretRef:
-      name: letsencrypt-production
-    solvers:
-      - http01:
-          ingress:
-            ingressClassName: webapprouting.kubernetes.azure.com #nginx
+# apiVersion: cert-manager.io/v1
+# kind: ClusterIssuer
+# metadata:
+#   name: letsencrypt-production
+# spec:
+#   acme:
+#     server: https://acme-v02.api.letsencrypt.org/directory
+#     email: gassouma530@gmail.com
+#     privateKeySecretRef:
+#       name: letsencrypt-production
+#     solvers:
+#       - http01:
+#           ingress:
+#             ingressClassName: webapprouting.kubernetes.azure.com #nginx
