--- a/manifests/ingress.yaml
+++ b/manifests/ingress.yaml
@@ -15,11 +15,11 @@ spec:
   ingressClassName: webapprouting.kubernetes.azure.com #nginx
   tls:
     - hosts:
-        - shopstore.freeddns.org
-        - www.shopstore.freeddns.org
+        - cameliapp.freeddns.org
+        - www.cameliapp.freeddns.org
       secretName: tls-secret
   rules:
-    - host: shopstore.freeddns.org
+    - host: cameliapp.freeddns.org
       http:
         paths:
           - path: /
@@ -36,7 +36,7 @@ spec:
                 name: backend-service
                 port:
                   number: 3000
-    - host: www.shopstore.freeddns.org
+    - host: www.cameliapp.freeddns.org
       http:
         paths:
           - path: /
