--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,32 +28,32 @@ jobs:
       #   env:
       #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      # - name: Log in to Docker Hub
+      #   uses: docker/login-action@v3
+      #   with:
+      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
+      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v3
 
-      # Build and push FRONTEND image
-      - name: Build and Push Frontend Docker image
-        uses: docker/build-push-action@v6
-        with:
-          context: ./frontend
-          push: true
-          platforms: linux/amd64,linux/arm64
-          tags:
-            docker.io/gassouma530975/testdeploy:frontend-${{ github.sha }}
-            # Build and push FRONTEND image
-      - name: Build and Push Backend Docker image
-        uses: docker/build-push-action@v6
-        with:
-          context: ./backend
-          push: true
-          platforms: linux/amd64,linux/arm64
-          tags: docker.io/gassouma530975/testdeploy:backend-${{ github.sha }}
+      # # Build and push FRONTEND image
+      # - name: Build and Push Frontend Docker image
+      #   uses: docker/build-push-action@v6
+      #   with:
+      #     context: ./frontend
+      #     push: true
+      #     platforms: linux/amd64,linux/arm64
+      #     tags:
+      #       docker.io/gassouma530975/testdeploy:frontend-${{ github.sha }}
+      #       # Build and push FRONTEND image
+      # - name: Build and Push Backend Docker image
+      #   uses: docker/build-push-action@v6
+      #   with:
+      #     context: ./backend
+      #     push: true
+      #     platforms: linux/amd64,linux/arm64
+      #     tags: docker.io/gassouma530975/testdeploy:backend-${{ github.sha }}
 
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@0.28.0
@@ -65,20 +65,20 @@ jobs:
           vuln-type: "os,library"
           severity: "CRITICAL,HIGH"
 
-      - name: Commit and Push Changes
-        run: |
-          sed -i "s|gassouma530975/testdeploy:.*|gassouma530975/testdeploy:frontend-${{github.sha}}|" manifests/front.yaml
-          sed -i "s|gassouma530975/testdeploy:.*|gassouma530975/testdeploy:backend-${{github.sha}}|" manifests/back.yaml
-          # configure user
-          git config --global user.name "${{ github.actor }}"
-          git config --global user.email "${{ github.actor }}@users.noreply.github.com"
-          # stage any file changes to be committed
-          git add manifests/front.yaml
-          git add manifests/back.yaml
-          # make commit with staged changes
-          git commit -m 'files changed ${{github.sha}}'
-          # push the commit back up to source GitHub repository
-          git push
+      # - name: Commit and Push Changes
+      #   run: |
+      #     sed -i "s|gassouma530975/testdeploy:.*|gassouma530975/testdeploy:frontend-${{github.sha}}|" manifests/front.yaml
+      #     sed -i "s|gassouma530975/testdeploy:.*|gassouma530975/testdeploy:backend-${{github.sha}}|" manifests/back.yaml
+      #     # configure user
+      #     git config --global user.name "${{ github.actor }}"
+      #     git config --global user.email "${{ github.actor }}@users.noreply.github.com"
+      #     # stage any file changes to be committed
+      #     git add manifests/front.yaml
+      #     git add manifests/back.yaml
+      #     # make commit with staged changes
+      #     git commit -m 'files changed ${{github.sha}}'
+      #     # push the commit back up to source GitHub repository
+      #     git push
       - name: Trigger ArgoCD sync
         run: |
           TOKEN=$(curl -s -k -X POST "$ARGOCD_SERVER/api/v1/session" \
