--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,14 +13,14 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
-      - name: analyse with sonarqube
-        uses: SonarSource/sonarqube-scan-action@v6.0.0
-        with:
-          args: >
-            -Dsonar.projectKey=testProject
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+      # - name: analyse with sonarqube
+      #   uses: SonarSource/sonarqube-scan-action@v6.0.0
+      #   with:
+      #     args: >
+      #       -Dsonar.projectKey=testProject
+      #   env:
+      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      #     SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
       #If you wish to fail your job when the Quality Gate is red, uncomment the
       #following lines. This would typically be used to fail a deployment.
       # - uses: sonarsource/sonarqube-quality-gate-action@master
@@ -55,15 +55,15 @@ jobs:
       #     platforms: linux/amd64,linux/arm64
       #     tags: docker.io/gassouma530975/testdeploy:backend-${{ github.sha }}
 
-      - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@0.28.0
-        with:
-          image-ref: "docker.io/gassouma530975/testdeploy:frontend-${{ github.sha }}"
-          format: "table"
-          #exit-code: '1'
-          ignore-unfixed: true
-          vuln-type: "os,library"
-          severity: "CRITICAL,HIGH"
+      # - name: Run Trivy vulnerability scanner
+      #   uses: aquasecurity/trivy-action@0.28.0
+      #   with:
+      #     image-ref: "docker.io/gassouma530975/testdeploy:frontend-${{ github.sha }}"
+      #     format: "table"
+      #     #exit-code: '1'
+      #     ignore-unfixed: true
+      #     vuln-type: "os,library"
+      #     severity: "CRITICAL,HIGH"
 
       # - name: Commit and Push Changes
       #   run: |
